Introduced threadsafe and singlethreaded
This was a doozie of a refactor, but thankfully Rust is a charm at
refactoring. The net result is four total surface APIs. One for each
async and non-async, and for each of those, one that is Send + Sync and
one that is !Send and !Sync.

While it's a lot of API surface, it means that the end-user picks which
implementation they want by just importing the correct module.

--- a/src/.crate-docs.md
+++ b/src/.crate-docs.md
@@ -16,22 +16,40 @@ loops or too-intensive scripts slowing down a server. The interpreter can assign
 different costs to various operations.
 
 This crate has two implementations of this approach: one that blocks the current
-thread and one that works with any async runtime.
+thread and one that works with any async runtime. Additionally, there are
+`threadsafe` (`Send + Sync`) and `singlethreaded` variations:
+
+| Async? | `Send + Sync`? | Module                                                          |
+|--------|----------------|-----------------------------------------------------------------|
+| no     | no             | [`blocking::singlethreaded`](blocking::singlethreaded)             |
+| no     | yes            | [`blocking::threadsafe`](blocking::threadsafe)                 |
+| yes    | no             | [`asynchronous::singlethreaded`](asynchronous::singlethreaded) |
+| yes    | yes            | [`asynchronous::threadsafe`](asynchronous::threadsafe)         |
+
+The APIs are identically designed between the modules. The notable changes
+between the modules are:
+
+- For async, functions that execute the future are implemented as futures. This
+  means, for example, `run_with_budget()` must be `.await`ed for anything to
+  happen.
+- For `Send + Sync`, the backing type is changed from `Rc<RefCell<T>>` to
+  `Arc<Mutex<T>>`. This is transparent to the public API, but the expected
+  performance differences will apply.
 
 ## Using from non-async code (Blocking)
 
-This example of the [blocking](blocking) implementation is from
-`examples/simple.rs` in the repository:
+This example of the [blocking, single-threaded](blocking::singlethreaded) implementation is
+from `examples/simple.rs` in the repository:
 
 ```rust
 use std::time::Duration;
 
-use budget_executor::blocking::{run_with_budget, Progress, Runtime};
+use budget_executor::blocking::singlethreaded::{Progress, Runtime};
 
 fn main() {
     // Run a task with no initial budget. The first time the task asks to spend
     // any budget, it will be paused.
-    let mut progress = run_with_budget(some_task_to_limit, 0);
+    let mut progress = Runtime::run_with_budget(some_task_to_limit, 0);
 
     // At this point, the task has run until the first call to
     // budget_executor::spend. Because we gave an initial_budget of 0, the future
@@ -105,7 +123,7 @@ Task completed with balance: Remaining(3), output: true
 
 ### How does this work?
 
-At the start of the example, [run_with_budget()](blocking::run_with_budget) is called with
+At the start of the example, [run_with_budget()](blocking::singlethreaded::Runtime::run_with_budget) is called with
 an initial balance of 0. This will cause the future (`some_task_to_limit()`) to
 execute until it executes [`spend(amount).await`](spend). When the future
 attempts to spend any budget, because the initial balance was 0, the future will
@@ -114,7 +132,7 @@ be paused until budget made available. `run_with_budget()` returns
 
 The example now loops until `progress` contains `Progress::Complete`. When
 `Progress::NoBudget` is returned instead, the task is resumed using
-[`continue_with_additional_budget()`](blocking::IncompleteFuture::continue_with_additional_budget). This resumes
+[`continue_with_additional_budget()`](blocking::singlethreaded::IncompleteFuture::continue_with_additional_budget). This resumes
 executing the future, which will re-awaken inside of `spend().await`. The budget
 will be checked again. If there is enough budget, `spend().await` will deduct
 the spent amount and return. If there isn't enough budget, the future will pause again and `continue_with_additional_budget` returns `Progress::NoBudget`.
@@ -135,21 +153,19 @@ asynchronous implementation.
 
 ## Using from async code
 
-This example is `examples/simple-async.rs` in the repository:
+This example of the [asynchronous, single-threaded](asynchronous::singlethreaded) implementation
+is `examples/simple-async.rs` in the repository:
 
 ```rust
 use std::time::Duration;
 
-use budget_executor::{
-    asynchronous::{run_with_budget, Progress},
-    BudgetContext,
-};
+use budget_executor::asynchronous::singlethreaded::{Context, Progress};
 
 #[tokio::main(flavor = "current_thread")]
 async fn main() {
     // Run a task with no initial budget. The first time the task asks to spend
     // any budget, it will be paused.
-    let mut progress = run_with_budget(some_task_to_limit, 0).await;
+    let mut progress = Context::run_with_budget(some_task_to_limit, 0).await;
 
     // At this point, the task has run until the first call to
     // budget_executor::spend. Because we gave an initial_budget of 0, the future
@@ -176,7 +192,7 @@ async fn main() {
     }
 }
 
-async fn some_task_to_limit(context: BudgetContext<usize>) -> bool {
+async fn some_task_to_limit(context: Context<usize>) -> bool {
     do_some_operation(1, &context).await;
     do_some_operation(5, &context).await;
     do_some_operation(1, &context).await;
@@ -184,7 +200,7 @@ async fn some_task_to_limit(context: BudgetContext<usize>) -> bool {
     true
 }
 
-async fn do_some_operation(times: u8, context: &BudgetContext<usize>) {
+async fn do_some_operation(times: u8, context: &Context<usize>) {
     println!("> Asking to spend {times} from the budget");
     context.spend(usize::from(times)).await;
     tokio::time::sleep(Duration::from_millis(u64::from(times) * 100)).await;
@@ -202,7 +218,8 @@ When run, it produces the same output as displayed in the blocking section.
 ### How does this work?
 
 This example is identical to the blocking example, but instead uses the
-[`asynchronous`](asynchronous) module's APIs: [`run_with_budget().await`](asynchronous::run_with_budget)
-and [`continue_with_additional_budget().await`](blocking::IncompleteFuture::continue_with_additional_budget).
+[`asynchronous`](asynchronous::singlethreaded) module's APIs:
+[`run_with_budget().await`](asynchronous::singlethreaded::Context::run_with_budget) and
+[`continue_with_additional_budget().await`](asynchronous::singlethreaded::IncompleteFuture::continue_with_additional_budget).
 
 This implementation is runtime agnostic and is actively tested against tokio.
